--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: rgb(255, 253, 253);
-  border: 50px solid rgb(32, 27, 32);
-  border-radius: 20px;
+  background-color: rgb(31, 134, 6);
+  border: 30px solid rgb(32, 27, 32);
+  border-radius: 15px;
 }
 
 h1 {
   font-size: 40px;
   margin-top: 0px;
+  color: white;
+  font-family: bolder;
 }
 
 .App {
