Media querry fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body {
   background-color: rgb(31, 134, 6);
   border: 30px solid rgb(32, 27, 32);
   border-radius: 15px;
+  height: auto;
+  width: auto;
 }
 
 h1 {
@@ -183,5 +185,18 @@ h1 {
   .expense-table button {
     padding: 0.5rem 0.8rem;
     font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    border-width: 10px;
+    min-height: 100%;
+    height: auto;
+  }
+
+  .App {
+    max-width: 100%;
+    width: 100%;
   }
 }
